# FFM-API

./: CMakeLists.txt  README.md  UtilitiesFFM.cpp  ffmhelper.sh
java/in/derros/jni/: UtilitiesFFM.java
src/arr/: MyArrayDemo.java  MyArrayInt.java  test.java
src/org/ByteReader/: ByteReader.java
src/org/FieldAccess/: HeavyObject.java  SecretAgent.java  run.java
